🎨 This is signed

--- a/tigers.yaml
+++ b/tigers.yaml
@@ -16,8 +16,5 @@ members:
 - Tyler
 - Kim
 
-<<<<<<< HEAD
 fetch: this
-=======
-fetch: this
->>>>>>> 27277b3be2ae1ebbcbde3e2f8fb6d9f13479a733
+signed: yes
